apps/sentinelflow-salesforce/force-app/main/default/objects/Zentom_Runbook__mdt/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>