apps/sentinelflow-salesforce/force-app/main/default/objects/Zentom_Runbook__mdt/fields/Runbook_Key__c.field-meta.xml
<CustomField>
    <fullName>Runbook_Key__c</fullName>
    <label>Runbook Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>