apps/sentinelflow-salesforce/force-app/main/default/objects/Zentom_Runbook__mdt/fields/Step_1__c.field-meta.xml
<CustomField>
    <fullName>Step_1__c</fullName>
    <label>Step 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>